--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
   <body>
     <div class="container"></div>
   </body>
-  <script src="/bundle.js"></script>
+  <script src="SimpleReduxProject/bundle.js"></script>
 </html>
